# ellipsoid

./: .buildinfo  .pdm-python  README.md  coverage.json  ellipsoid.html  ellipsoid.projec_ellipse.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tuyere.html
_modules/: index.html
_modules/ellipsoid/: projec_ellipse.html
_sources/: modules.rst.txt  tuyere.rst.txt
docs/: conf.py  ellipsoid.projec_ellipse.rst  ellipsoid.rst  index.rst
docs/_build/doctrees/: ellipsoid.doctree  ellipsoid.projec_ellipse.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  ellipsoid.html  ellipsoid.projec_ellipse.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: modules.rst.txt
src/ellipsoid/: projec_ellipse.py
tests/: test_visualisation.py
