[project]
requires-python = ">=3.11" 
name = "ellipsoid"
description = "Ellipsoid orbiting around other ellipsoid"
authors = [
    {name = "Cyprien Hortal", email = "hortal.cyprien@gmail.com"},
    {name = "Marie Lequien", email = "marie.lequien02@gmail.com"},
]
version = "1.0.0"
dependencies = [
    "pydantic>=2.6.4",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "pytest>=8.3.4",
    "numpy>=2.2.0",
    "matplotlib>=3.9.4",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.1",
]
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.3.3",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    "pdm==2.20.1",
]
test = [
    "pytest>=7.4.3",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]
doc = [
    "sphinx>=8.0.2",
    "sphinxcontrib-apidoc>=0.5.0",
    "sphinx-rtd-theme>=3.0.0rc1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pdm.lock]
targets = [
    { os = "any", python = ">=3.11", platform = "any" }
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
